css: fix giphy overflowing at bottom of page

--- a/custom.css
+++ b/custom.css
@@ -297,6 +297,10 @@ img {
    margin-bottom: 0px!important;
 }
 
+.qM5j0e {
+   padding-bottom:0!important;
+}
+
 .BrQiad {
    max-width: none;
    max-height: 450px;
